rootfs/etc/firewall/firewall
# Generated by iptables-save v1.4.21 on Thu Mar 19 11:21:17 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:BADTCP - [0:0]
:CONNTRACK - [0:0]
:ICMP - [0:0]
:LOG_DROP - [0:0]
:LOOPBACK - [0:0]
:NEWNOTSYN - [0:0]
:PSCAN - [0:0]
:CLIENT - [0:0]
:SERVER - [0:0]
:DHCP - [0:0]
:SAMBA - [0:0]
:INTRUST - [0:0]
-A INTRUST -s 192.168.10.0/24 -j SERVER
-A INTRUST -s 10.0.10.0/24 -j SERVER
-A INTRUST -s 0.0.0.0 -j DHCP
-A INTRUST -j LOG_DROP
-A INPUT -p tcp -j BADTCP
-A INPUT -j LOOPBACK
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 2/sec -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j LOG --log-prefix "ICMP/in/8 Excessive: "
-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -p icmp -j ICMP
-A INPUT -j CONNTRACK
-A INPUT -j INTRUST -m state --state NEW
-A INPUT -m pkttype --pkt-type multicast -j DROP
-A INPUT -m pkttype --pkt-type broadcast -j DROP
-A INPUT -j LOG
-A SERVER -p tcp -m tcp --dport 520 -m comment --comment "DHCP failover" -j ACCEPT
-A SERVER -p tcp -m tcp --dport 22 -m comment --comment "SSH" -j ACCEPT
-A SERVER -p tcp -m tcp --dport 5201 -m comment --comment "IPERF" -j ACCEPT
-A SERVER -p udp -m udp --sport 68 --dport 67 -j ACCEPT -m comment --comment "DHCP"
-A DHCP -p udp -m udp --sport 68 --dport 67 -j ACCEPT -m comment --comment "DHCP"
-A SERVER -j SAMBA
-A SERVER -j LOG_DROP
-A SAMBA -p udp -m udp --dport 137 -j ACCEPT
-A SAMBA -p udp -m udp --dport 138 -j ACCEPT
-A SAMBA -p udp -m udp --dport 138 -j ACCEPT
-A SAMBA -m state --state NEW -m tcp -p tcp --dport 139 -j ACCEPT
-A SAMBA -m state --state NEW -m tcp -p tcp --dport 445 -j ACCEPT
-A FORWARD -p tcp -j BADTCP
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -j LOOPBACK
-A FORWARD -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -p icmp -j ICMP
-A FORWARD -j CONNTRACK
-A FORWARD -p udp -m udp --dport 67 -j DROP -m comment --comment "DROP Broadcast DHCP"
-A FORWARD -s 192.168.10.0/24 -i br-lan -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -s 10.0.10.0/24 -i br-lan -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -j LOG
-A OUTPUT -j LOOPBACK
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p icmp -j ICMP
-A OUTPUT -j CONNTRACK
-A OUTPUT -p udp -m udp --sport 67 --dport 68 -j ACCEPT -m comment --comment "REPLY DHCP"
-A OUTPUT -j CLIENT -m conntrack --ctstate NEW
-A OUTPUT -j LOG
-A CLIENT -p udp -m udp --dport 53 -m comment --comment "DNS" -j ACCEPT
-A CLIENT -p tcp -m tcp --dport 53 -m comment --comment "DNS" -j ACCEPT
-A CLIENT -p tcp -m tcp --dport 80 -m comment --comment "HTTP" -j ACCEPT
-A CLIENT -p tcp -m tcp --dport 443 -m comment --comment "HTTPS" -j ACCEPT
-A CLIENT -p tcp -m tcp --dport 22 -m comment --comment "SSH"  -j ACCEPT
-A CLIENT -p udp -m udp --dport 123 -m comment --comment "NTP"  -j ACCEPT
-A CLIENT -p tcp -m tcp --dport 520 -m comment --comment "DHCP failover"  -j ACCEPT
-A BADTCP -i lo -j RETURN
-A BADTCP -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j PSCAN
-A BADTCP -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j PSCAN
-A BADTCP -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j PSCAN
-A BADTCP -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN -j PSCAN
-A BADTCP -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j PSCAN
-A BADTCP -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j PSCAN
-A BADTCP -p tcp -m tcp --tcp-flags FIN,PSH,URG FIN,PSH,URG -j PSCAN
-A BADTCP -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j PSCAN
-A BADTCP -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j NEWNOTSYN
-A CONNTRACK -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A CONNTRACK -m conntrack --ctstate INVALID -j DROP
-A CONNTRACK -p icmp -m conntrack --ctstate RELATED -j ACCEPT
-A ICMP -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A ICMP -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A ICMP -p icmp -m icmp --icmp-type 3/3 -j ACCEPT
-A ICMP -p icmp -m icmp --icmp-type 3/1 -j ACCEPT
-A ICMP -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ICMP -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ICMP -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ICMP -j LOG_DROP
-A LOG_DROP -j LOG
-A LOG_DROP -j DROP
-A LOOPBACK -i lo -j ACCEPT
-A LOOPBACK -o lo -j ACCEPT
-A LOOPBACK -s 127.0.0.0/8 -j DROP
-A LOOPBACK -d 127.0.0.0/8 -j DROP
# -A NEWNOTSYN -m limit --limit 10/min -j LOG --log-prefix "DROP_NEWNOTSYN "
-A NEWNOTSYN -m comment --comment DROP_NEWNOTSYN -j DROP
-A PSCAN -p tcp -m limit --limit 10/min -m comment --comment "DROP_TCP PScan" -j LOG --log-prefix "DROP_TCP Scan "
-A PSCAN -p udp -m limit --limit 10/min -m comment --comment "DROP_UDP PScan" -j LOG --log-prefix "DROP_UDP Scan "
-A PSCAN -p icmp -m limit --limit 10/min -m comment --comment "DROP_ICMP PScan" -j LOG --log-prefix "DROP_ICMP Scan "
-A PSCAN -f -m limit --limit 10/min -m comment --comment "DROP_FRAG PScan" -j LOG --log-prefix "DROP_FRAG Scan "
-A PSCAN -m comment --comment DROP_PScan -j DROP
COMMIT
# Completed on Thu Mar 19 11:21:17 2015
# Generated by iptables-save v1.4.21 on Thu Mar 19 11:21:17 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Mar 19 11:21:17 2015
